thay doi trong file index de tap commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+  daodao
     <select class="select-chart-stat"></select>
     <div id="linechart_material"></div>
     <script type="text/template" class="chart-select-template"><%= get("title") %></script>
